--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vis20w-vue-d3",
-  "version": "0.1.0",
+  "name": "vis-vue-d3",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
